--- a/index/index.html
+++ b/index/index.html
@@ -52,6 +52,11 @@
             <h1 id="Circuito">Circuitoc</h1>
              <img src="../img/circuito-proyecto.png" class="img-fluid"  alt="">           
             </div>
+            <div>
+                <h1>DIAGRAMA EN BLOQUE</h1>
+                <img src="../img/DIAGRAMA.png" class="img-fluid" alt="2CENTIMETEOS">
+
+            </div>
 
 
 
